--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section id="home" class="hero">
     <canvas id="bgCanvas"></canvas>
     <div class="hero-content">
-      <img src="C:\Users\JAINIL\OneDrive\Desktop\portfolio\pf\photo\image.png" alt="Your Photo" class="hero-photo">
+      <img src="photo/image.png" alt="profil" class="hero-photo">
       <h1>Hi, I'm <span class="name">MAYURKUMAR CHAVDA</span></h1>
       <h2><span class="name">Full Stack Developer</span></h2>
       <h2>I build <span class="typing"></span></h2>
